WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239087
REGRESSION (
r292696
): lldb_webkit_unittest.TestSummaryProviders.serial_test_WTFStringImpl_SummaryProvider_null_string is a constant failure
https://bugs.webkit.org/show_bug.cgi?id=239087
Summary
REGRESSION (r292696): lldb_webkit_unittest.TestSummaryProviders.serial_test_W...
Karl Rackler
Reported
2022-04-11 14:21:40 PDT
lldb_webkit_unittest.TestSummaryProviders.serial_test_WTFStringImpl_SummaryProvider_null_string The first build that the failure is seen on:
https://build.webkit.org/#/builders/370/builds/2637
Diff: Traceback (most recent call last): File "/Volumes/Data/worker/monterey-release-applesilicon-tests-wk2/build/Tools/lldb/lldb_webkit_unittest.py", line 110, in serial_test_WTFStringImpl_SummaryProvider_null_string self.assertEqual(summary, "{ length = 0, is8bit = 1, contents = '' }") AssertionError: '' != "{ length = 0, is8bit = 1, contents = '' }" + { length = 0, is8bit = 1, contents = '' }
Attachments
Patch
(1.40 KB, patch)
2022-04-11 14:34 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2022-04-11 14:34:28 PDT
Created
attachment 457287
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2022-04-11 14:34:39 PDT
<
rdar://problem/91589463
>
EWS
Comment 3
2022-04-11 18:17:00 PDT
Committed
r292750
(
249534@main
): <
https://commits.webkit.org/249534@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 457287
[details]
.
Darin Adler
Comment 4
2022-04-12 11:02:40 PDT
Comment on
attachment 457287
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=457287&action=review
> Tools/ChangeLog:9 > + Revert change to aNullString made in
r292696
as the the following test relies on this String being empty: > + lldb_webkit_unittest.TestSummaryProviders.serial_test_WTFStringImpl_SummaryProvider_null_string
Someone named an empty string "aNullString"! Great way to set a trap for Chris.
Alexey Proskuryakov
Comment 5
2022-04-12 14:53:19 PDT
We also have "anEmptyString" right below. Which is now identical to aNullString.
Chris Dumez
Comment 6
2022-04-12 15:03:40 PDT
(In reply to Alexey Proskuryakov from
comment #5
)
> We also have "anEmptyString" right below. Which is now identical to > aNullString.
Yes, aNullString and anEmptyString are identical now and historically (before I tried to fix this non-sense recently and failed because I didn't realize this python test somehow relies on these).
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug