REGRESSION:(r292696) lldb_webkit_unittest.TestSummaryProviders.serial_test_WTFStringImpl_SummaryProvider_null_string is a constant failure https://bugs.webkit.org/show_bug.cgi?id=239087

Reviewed by Jonathan Bedard.

Revert change to aNullString made in r292696 as the the following test relies on this String being empty:
lldb_webkit_unittest.TestSummaryProviders.serial_test_WTFStringImpl_SummaryProvider_null_string

* lldb/lldbWebKitTester/main.cpp:
(testSummaryProviders):

Canonical link: https://commits.webkit.org/249534@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292750 268f45cc-cd09-0410-ab3c-d52691b4dbfc